--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -7,6 +7,25 @@
     <title>Document</title>
 </head>
 <body>
+  <header>
+  <nav>
+      <ul>
+          {% if user.is_authenticated %}
+          <li> Hello, {{ user.username }}</li>
+          <li>
+              <a href="{% url 'logout' %}">Logout</a>
+          </li>
+          {% else %}
+          <li>
+              <a href="{% url 'signup' %}">Sigh up</a>
+          </li>
+          <li>
+              <a href="{% url 'login' %}">Login</a>
+          </li>
+          {% endif %}
+      </ul>
+  </nav>
+</header>
     <main>
         <div>
             <h1>Login</h1>
