--- a/receipts/templates/accounts/list.html
+++ b/receipts/templates/accounts/list.html
@@ -6,7 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body>    <header>
+    <nav>
+        <ul>
+            {% if user.is_authenticated %}
+            <li> Hello, {{ user.username }}</li>
+            <li><a href="{% url 'logout' %}">Logout</a></li>
+            <li><a href="{% url 'create_receipt' %}">Create Receipt</a></li>
+            <li><a href="{% url 'create_account' %}">Create Account</a></li>
+            <li><a href="{% url 'account_list' %}">My Account</a></li>
+            <li><a href="{% url 'create_category' %}">Create Category</a></li>
+            {% else %}
+            <li><a href="{% url 'signup' %}">Sigh up</a></li>
+            <li><a href="{% url 'login' %}">Login</a></li>
+            {% endif %}
+        </ul>
+    </nav>
+</header>
     <main>
         <table>
             <thead>
