--- a/receipts/templates/receipts/list.html
+++ b/receipts/templates/receipts/list.html
@@ -12,16 +12,14 @@
                 <ul>
                     {% if user.is_authenticated %}
                     <li> Hello, {{ user.username }}</li>
-                    <li>
-                        <a href="{% url 'logout' %}">Logout</a>
-                    </li>
+                    <li><a href="{% url 'logout' %}">Logout</a></li>
+                    <li><a href="{% url 'create_receipt' %}">Create Receipt</a></li>
+                    <li><a href="{% url 'create_account' %}">Create Account</a></li>
+                    <li><a href="{% url 'account_list' %}">My Account</a></li>
+                    <li><a href="{% url 'create_category' %}">Create Category</a></li>
                     {% else %}
-                    <li>
-                        <a href="{% url 'signup' %}">Sigh up</a>
-                    </li>
-                    <li>
-                        <a href="{% url 'login' %}">Login</a>
-                    </li>
+                    <li><a href="{% url 'signup' %}">Sigh up</a></li>
+                    <li><a href="{% url 'login' %}">Login</a></li>
                     {% endif %}
                 </ul>
             </nav>
